Fixed issue where dropdown select would go behind job cards

--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -5,4 +5,9 @@
     margin-left: auto;
     margin-right: auto;
     font-family: 'Lato', sans-serif;
+    z-index: 0;
+}
+
+.card-body{
+    z-index: 1;
 }
